--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 playwright==1.40.0
 openai==1.3.7
 pydantic==2.5.0
-email-validator==2.5.1
+email-validator
 pydantic-settings==2.1.0
 httpx==0.25.2
 python-dotenv==1.0.0
